--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,7 @@ supabase>=2.3.0
 pandas>=2.0.0
 streamlit-option-menu
 requests
-rembg==2.0.60
-onnxruntime-cpu
+numpy<2.0.0
+rembg[cpu]
+onnxruntime
+opencv-python-headless
