Render Fix: Force Python 3.11 and correct requirements

--- a/render.yaml
+++ b/render.yaml
@@ -9,3 +9,5 @@ services:
     envVars:
       - key: SCARF_NO_ANALYTICS
         value: "true"
+      - key: PYTHON_VERSION
+        value: "3.11.9"
