--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
     env: python
     region: singapore
     plan: free
-    buildCommand: pip install -r api/requirements.txt
-    startCommand: python -m uvicorn api.app:app --host 0.0.0.0 --port 10000
+    buildCommand: pip install -r backend/requirements.txt
+    startCommand: python -m uvicorn backend.app:app --host 0.0.0.0 --port 10000
     envVars:
       - key: SCARF_NO_ANALYTICS
         value: "true"
